# remove-ai-watermarks

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  maintain.sh  pyproject.toml  release.sh
.agents/rules/: project.md
.agents/skills/python-code-review/: SKILL.md
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: distribute.yml  publish.yml  test.yml
data/doubao_capture/: README.md
data/gemini_capture/: README.md
data/jimeng_capture/: README.md
data/samples/openai-images-2/: README.md
docs/: module-internals.md  synthid.md  verification-plan.md  watermarking-landscape.md
scripts/: ai_score.py  fill_quality.py  pill_gate_audit.py  real_examples_e2e.py  render_pill_silhouette.py  render_vendor_silhouettes.py  scan_dataset.py  sidecar_regression.py  smoke_matrix.py  text_detection_benchmark.py  vendor_cohort_harvest.py  vendor_mark_calibrate.py  visible_alpha_solve.py  visible_positives.py
src/remove_ai_watermarks/: __init__.py  _text_mark_engine.py  cli.py  doubao_engine.py  face_protector.py  gemini_engine.py  gui.py  humanizer.py  identify.py  invisible_engine.py  jimeng_engine.py  metadata.py  photomaker_restore.py  pill_engine.py  qwen_engine.py  region_eraser.py  samsung_engine.py  text_protector.py  watermark_registry.py
src/remove_ai_watermarks/assets/: __init__.py
src/remove_ai_watermarks/noai/: __init__.py  c2pa.py  cleaner.py  constants.py  extractor.py  img2img_runner.py  progress.py  utils.py  watermark_profiles.py  watermark_remover.py
src/remove_ai_watermarks/noai/ctrlregen/: __init__.py  color.py  engine.py  ip_adapter.py  pipeline.py  tiling.py
tests/: __init__.py  conftest.py  test_cli.py  test_cpu_offload.py  test_doubao_engine.py  test_face_protector.py  test_gemini_engine.py  test_humanizer.py  test_identify.py  test_inpaint_fallback.py  test_invisible_engine.py  test_jimeng_engine.py  test_metadata.py  test_noai.py  test_photomaker_restore.py  test_pill_engine.py  test_platform.py  test_qwen_engine.py  test_region_eraser.py  test_samsung_engine.py  test_text_protector.py  test_watermark_registry.py
typings/piexif/: __init__.pyi
